{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 80,
  "lineage": "1684e8fb-7aea-87e4-631c-4e75f250f3ef",
  "resources": [
    {
      "module": "module.namespace",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "ns",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "demo",
            "metadata": [
              {
                "generation": 0,
                "name": "demo",
                "resource_version": "682",
                "uid": "dc1f861f-9499-41b9-b3e4-98df05e11859"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "demo"
          }
        }
      ]
    },
    {
      "module": "module.nginx",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "demo/demo-nginx-ingress",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "traefik"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "demo-nginx-ingress",
                "namespace": "demo",
                "resource_version": "696",
                "uid": "a01231f5-f09a-41a7-bb3e-903bacff56a9"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "traefik",
                "rule": [
                  {
                    "host": "demo.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "demo-nginx",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "172.19.0.3"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "demo-nginx-ingress",
            "namespace": "demo"
          },
          "dependencies": [
            "module.namespace.kubernetes_namespace.ns",
            "module.nginx.kubernetes_service.nginx"
          ]
        }
      ]
    },
    {
      "module": "module.nginx",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "demo/demo-nginx",
            "metadata": [
              {
                "generation": 0,
                "name": "demo-nginx",
                "namespace": "demo",
                "resource_version": "686",
                "uid": "d84b86e2-d119-4458-9972-62033da8fe30"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.56.143",
                "cluster_ips": [
                  "10.43.56.143"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "demo-nginx"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "demo-nginx",
            "namespace": "demo"
          },
          "dependencies": [
            "module.namespace.kubernetes_namespace.ns"
          ]
        }
      ]
    },
    {
      "module": "module.second",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "second",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "demo/second",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "traefik"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "second",
                "namespace": "demo",
                "resource_version": "741",
                "uid": "a8d9b2d8-b795-43d4-9f5b-0bc043dc20bd"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "second.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "second",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "172.19.0.3"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "second",
            "namespace": "demo"
          },
          "dependencies": [
            "module.namespace.kubernetes_namespace.ns",
            "module.second.kubernetes_deployment.second",
            "module.second.kubernetes_service.second"
          ]
        }
      ]
    },
    {
      "module": "module.second",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "second",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "demo/second",
            "metadata": [
              {
                "generation": 0,
                "name": "second",
                "namespace": "demo",
                "resource_version": "737",
                "uid": "0ad1b8fa-48bd-41b5-a0f2-551b3c143a3a"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.252.172",
                "cluster_ips": [
                  "10.43.252.172"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "second"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "second",
            "namespace": "demo"
          },
          "dependencies": [
            "module.namespace.kubernetes_namespace.ns",
            "module.second.kubernetes_deployment.second"
          ]
        }
      ]
    }
  ]
}